--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,18 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.13
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.35
 loader_version=0.11.6
 
 # Mod Properties
-mod_version=0.3.0
-supported_versions=1.17.X
-maven_group=com.emonadeo
-archives_base_name=autorun
+mod_version=0.4.0
+generic_support_version=1.17
+maven_group=net.fracturedcode
+archives_base_name=autorun-alternative
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.36.0+1.17
-modmenu_version=2.0.3
+fabric_version=0.37.2+1.17
+modmenu_version=2.0.4
 cloth_version=5.0.34
-
-# CurseGradle
-project_id=279429
-release_type=release
